package entity;

public enum Role {
    IN_CHARGE,
    STAFF,
    MEMBER
}
