
    create table Activity (
       id int8 generated by default as identity,
        activityName varchar(255),
        comment varchar(255),
        isPublic boolean not null,
        latitude float8 not null,
        longitude float8 not null,
        publicationDate date,
        startDateTime timestamp,
        belongsTo_id int8,
        previousActivity_id int8,
        primary key (id)
    );

    create table Event (
       id int8 generated by default as identity,
        name varchar(255),
        planedEndDateTime timestamp,
        planedStartDateTime timestamp,
        eventType_id int8,
        primary key (id)
    );

    create table EventType (
       id int8 generated by default as identity,
        maxPersonAllowed int4 not null,
        type varchar(255),
        primary key (id)
    );

    create table Person (
       id int8 generated by default as identity,
        comment varchar(255),
        firstname varchar(255),
        lastname varchar(255),
        role int4,
        telephone varchar(255),
        event_id int8,
        primary key (id)
    );

    create table Topic (
       id int8 generated by default as identity,
        comment varchar(255),
        name varchar(255),
        event_id int8,
        previousTopic_id int8,
        primary key (id)
    );

    alter table if exists Activity 
       add constraint FK1k7tjr5im8l4uskojn217724o 
       foreign key (belongsTo_id) 
       references Topic;

    alter table if exists Activity 
       add constraint FK3lxim153ss7jq1leyw97fn32i 
       foreign key (previousActivity_id) 
       references Activity;

    alter table if exists Event 
       add constraint FKfqkcqcyguijta27wic3eu24kp 
       foreign key (eventType_id) 
       references EventType;

    alter table if exists Person 
       add constraint FKhx6sbu85x6maywgxut2sxqb7m 
       foreign key (event_id) 
       references Event;

    alter table if exists Topic 
       add constraint FK7ako2w4aegodj0s8yawgswt5v 
       foreign key (event_id) 
       references Event;

    alter table if exists Topic 
       add constraint FK8kprmabtprwoof9nraefeol3c 
       foreign key (previousTopic_id) 
       references Topic;
